--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-    <ImageView android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/noteImage"></ImageView>
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName"></TextView>
+    <ImageView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/noteImage"></ImageView>
+    <TextView android:layout_alignParentLeft="true" android:layout_below="@+id/noteImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName"></TextView>
     
-</LinearLayout>
+</RelativeLayout>
