image scaling works and the add button adds notes

--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -4,7 +4,7 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-    <ImageView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/noteImage"></ImageView>
+    <ImageView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/noteImage" android:scaleType="fitCenter"></ImageView>
     <TextView android:layout_alignParentLeft="true" android:layout_below="@+id/noteImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName"></TextView>
     
 </RelativeLayout>
