--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/handle_notes">
-        <item android:icon="@android:drawable/ic_menu_add" android:title="@string/new_note" android:id="@+id/main_menu_addnote"></item>
+        <item android:title="@string/new_note" android:id="@+id/main_menu_addnote" android:icon="@drawable/ic_menu_add"></item>
     </group>
     <item android:title="draw" android:id="@+id/main_menu_draw"></item>
     
