forcing portrait mode on DrawActivity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,7 +9,11 @@
     	android:layout_height="fill_parent"
     	android:layout_width="fill_parent"
     	android:gravity="center" 
-    	android:numColumns="auto_fit" android:verticalSpacing="10dp" android:horizontalSpacing="10dp">
+    	android:numColumns="auto_fit"
+    	android:columnWidth="90dp"
+    	android:stretchMode="columnWidth"
+    	android:verticalSpacing="30dp" 
+    	android:horizontalSpacing="30dp">
    	</GridView>
 		
 </LinearLayout>
