--- a/res/layout/draw.xml
+++ b/res/layout/draw.xml
@@ -2,8 +2,7 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="match_parent" android:orientation="vertical" android:layout_width="match_parent">
-    <de.deepsource.deepnotes.views.DrawView 
-	    android:id="@+id/drawView" android:layout_width="wrap_content" android:layout_height="wrap_content">
-	</de.deepsource.deepnotes.views.DrawView>
+    <ViewFlipper android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/viewFlipper">
+    </ViewFlipper>
     
 </LinearLayout>
