--- a/res/menu/draw_menu.xml
+++ b/res/menu/draw_menu.xml
@@ -7,7 +7,7 @@
         
     </group>
     <group android:id="@+id/ColorFuncionality">
-        <item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@android:drawable/ic_menu_edit">
+        <item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@drawable/ic_menu_edit">
             <menu>
                 <item android:title="@string/color_black" android:id="@+id/draw_menu_colorblack"></item>
                 <item android:title="@string/color_red" android:id="@+id/draw_menu_colorred"></item>
@@ -15,14 +15,14 @@
             </menu>
         </item>
     </group><group android:id="@+id/UtilityFuncionality">
-        <item android:title="@string/import_image" android:id="@+id/draw_menu_importimage" android:icon="@android:drawable/ic_menu_gallery">
+        <item android:title="@string/import_image" android:id="@+id/draw_menu_importimage" android:icon="@drawable/ic_menu_gallery">
             <menu>
                 <item android:title="@string/import_from_camera" android:id="@+id/draw_menu_importfromcamera"></item>
                 <item android:title="@string/import_from_gallery" android:id="@+id/draw_menu_importfromgallery"></item>
             </menu>
         </item>
-        <item android:id="@+id/draw_menu_share" android:title="@string/share" android:icon="@android:drawable/ic_menu_share"></item>
-        <item android:id="@+id/draw_menu_delete" android:title="@string/delete" android:icon="@android:drawable/ic_menu_delete"></item>
+        <item android:id="@+id/draw_menu_share" android:title="@string/share" android:icon="@drawable/ic_menu_share"></item>
+        <item android:id="@+id/draw_menu_delete" android:title="@string/delete" android:icon="@drawable/ic_menu_delete"></item>
     </group>
     
     
