--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -2,8 +2,8 @@
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
     <ImageView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/noteImage" android:scaleType="fitCenter"></ImageView>
     <TextView android:layout_alignParentLeft="true" android:layout_below="@+id/noteImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName"></TextView>
     
