--- a/res/anim/slideinfromright.xml
+++ b/res/anim/slideinfromright.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-	<translate android:startOffset="400" android:fromXDelta="115%p"
-		android:toXDelta="0%p" android:duration="400" />
-	<translate android:startOffset="800" android:fromXDelta="10%p"
-		android:toXDelta="0%p" android:duration="400" />
-	<scale android:startOffset="800" android:fromXScale="0.8"
-		android:toXScale="1.0" android:fromYScale="0.8" android:toYScale="1.0"
-		android:duration="400" android:zAdjustment="bottom" />
+	<translate android:startOffset="400" android:fromXDelta="100%p"
+		android:toXDelta="0%p" android:duration="400" android:zAdjustment="top"/>
 </set>
