--- a/res/layout/draw.xml
+++ b/res/layout/draw.xml
@@ -2,7 +2,7 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="fill_parent" android:orientation="vertical" android:layout_width="fill_parent">
-    <ViewFlipper android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/viewFlipper" android:background="@drawable/wood_background">
+    <ViewFlipper android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/viewFlipper">
     </ViewFlipper>
     
 </LinearLayout>
