--- a/res/menu/draw_menu.xml
+++ b/res/menu/draw_menu.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
     
     <group android:id="@+id/ColorFuncionality">
-        <item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@drawable/ic_menu_edit">
+        <item android:id="@+id/draw_menu_undo" android:title="@string/undo" android:icon="@drawable/ic_menu_revert"></item><item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@drawable/ic_menu_edit">
 		            <menu>
 		                <item android:title="@string/color_black" android:id="@+id/draw_menu_colorblack"></item>
 		                <item android:title="@string/color_red" android:id="@+id/draw_menu_colorred"></item>
@@ -18,6 +18,7 @@
 		                <item android:title="@string/pen_width_thin" android:id="@+id/draw_menu_penwidththin"></item>
 		            </menu>
             	</item>
+            	
     </group><group android:id="@+id/CoreFuncionality">
         <!-- <item android:title="@string/new_note" android:id="@+id/draw_menu_newnote" android:icon="@drawable/ic_menu_add"></item> -->
         <item android:id="@+id/draw_menu_save" android:title="@string/save" android:icon="@drawable/ic_menu_save"></item>
