--- a/res/menu/draw_menu.xml
+++ b/res/menu/draw_menu.xml
@@ -3,12 +3,13 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
     
     <group android:id="@+id/ColorFuncionality">
-        <item android:id="@+id/draw_menu_undo" android:title="@string/undo" android:icon="@drawable/ic_menu_revert"></item><item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@drawable/ic_menu_edit">
+        <item android:id="@+id/draw_menu_undo" android:title="@string/undo" android:icon="@drawable/ic_menu_revert"></item><item android:title="@string/change_color" android:id="@+id/draw_menu_changecolor" android:icon="@drawable/ic_menu_color">
 		            <menu>
 		                <item android:title="@string/color_black" android:id="@+id/draw_menu_colorblack"></item>
-		                <item android:title="@string/color_red" android:id="@+id/draw_menu_colorred"></item>
+		                <item android:id="@+id/draw_menu_colorwhite" android:title="@string/color_white"></item><item android:title="@string/color_red" android:id="@+id/draw_menu_colorred"></item>
 		                <item android:id="@+id/draw_menu_coloryellow" android:title="@string/color_yellow"></item>
 		                <item android:id="@+id/draw_menu_colorcustom" android:title="@string/userdefined"></item>
+		                
 		            </menu>
 		        </item>
             	<item android:title="@string/pen_width" android:id="@+id/draw_menu_changepenwidth" android:icon="@drawable/ic_menu_edit">
