--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -4,6 +4,6 @@
   android:orientation="vertical"
   android:layout_width="fill_parent" android:layout_height="match_parent">
     <ImageView android:src="@drawable/icon" android:layout_width="wrap_content" android:id="@+id/noteImage" android:scaleType="fitCenter" android:layout_gravity="center" android:layout_height="200dp"></ImageView>
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName" android:layout_gravity="center"></TextView>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/fileName" android:layout_gravity="center" android:textColor="@color/text"></TextView>
     
 </LinearLayout>
